--- a/bootstrap/index1.html
+++ b/bootstrap/index1.html
@@ -3,18 +3,18 @@
 <head>
 	<title>BHARDWAJ WEB</title>
 	
+   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Bootstrap js -->
     <link rel="stylesheet" href="bootstrap.min">
-    <!-- custom bootstrap css -->
-     <link rel="stylesheet" href="index1.css">
-     <!-- font awsome css -->
-     
-</head>
-<body>
-	<div class="bgimg">
-	<nav class="navbar navbar-expand-lg navbar-dark fixed-top  bg-primary">
+     <link rel="stylesheet" type="text/css" href="index1.css">
+     <style>
+     </style>
+   </head>
+      <body>
+        <div class="bgimg">
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
  <h3 class="text-capitalize text-light">bhardwaj web</h3>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,10 +23,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Trainers</a>
+        <a class="nav-link" href="index1.html">About</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -51,7 +51,16 @@
         <a class="nav-link disabled" href="#"data-toggle="modal" data-target="#exampleModal">ContactUs</a>
       </li>
     </ul>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  </div>
+</nav>
+   <div class="container text-center headerset">
+      <h2 class="text-white text-capitalize">welcome to my demo website</h2>
+      <h1 class="text-white text-capitalize">i am kush bhardwaj</h1>
+      <button class="btn btn-warning text-white text-capitalize">join now</button>
+      
+    </div>
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -95,7 +104,7 @@
            <option>Kerla</option>
             <option>Haidrabaad</option>
              <option>UttraKhand</option>
-              <option>Maharastra</option>n
+              <option>Maharastra</option>
                <option>Uttar Pardeas</option>
       </select>
     </div>
@@ -121,15 +130,8 @@
     </div>
   </div>
 </div>
-  </div>
-</nav>
 
-		<div class="container text-white text-center text-capitalize headerset">
-			<h2>welcome to our website</h2>
-			<h1>thanks nice to meet you</h1>
-			<button class="btn btn-warning text-white">JOIN NOW</button>
-		</div>
-</div>
+         </div>
 <!-- about us-->
  <section>
   <div class="container-fluid">
@@ -224,7 +226,7 @@
 								<img src="images/2.jpg" class=" figure-img img-fluid rounded-circle" height="250px"
 								width="250px;">
 								<figcaption>
-									<h4>don't know her name</h4>
+									<h4>Gymer</h4>
 									<p class="figer-caption">Gym Trainer</p>
 								</figcaption>
 							</figure>
@@ -235,7 +237,7 @@
 								<img src="images/broo2.jpg" class=" figure-img img-fluid rounded-circle home" height="250px"
 								width="250px;">
 								<figcaption>
-									<h4>Akash Bhar</h4>
+									<h4>Akash Bhardwaj</h4>
 									<p class="figer-caption">Gym Trainer</p>
 								</figcaption>
 							</figure>
@@ -246,7 +248,7 @@
 								<img src="images/11.jpg" class=" figure-img img-fluid rounded-circle" height="250px"
 								width="250px;">
 								<figcaption>
-									<h4>don't know her name</h4>
+									<h4>Gymer</h4>
 									<p class="figer-caption">Gym Trainer</p>
 								</figcaption>
 							</figure>
